tests/sksl/errors/Ossfuzz38140.glsl
### Compilation failed:

error: 1: function 'half4 blend_src_over(half4 src, half4 dst)' was already defined
error: 5: shader 'main' must be main() or main(float2)
error: 6: unknown identifier 'src'
error: 6: unknown identifier 'dst'
4 errors
